{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 498,
  "lineage": "e34707a0-c5df-9bfb-686a-6e1914892850",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:loadbalancer/app/ACS-ext-alb/6671dbd9a8cd4aa0",
            "arn_suffix": "app/ACS-ext-alb/6671dbd9a8cd4aa0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ACS-ext-alb-565113561.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:571207880192:loadbalancer/app/ACS-ext-alb/6671dbd9a8cd4aa0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ACS-ext-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-036a4120ff4e19ecf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e37481a8a6ac22ef"
              },
              {
                "subnet_id": "subnet-0e76da61ac2553606"
              }
            ],
            "subnets": [
              "subnet-0e37481a8a6ac22ef",
              "subnet-0e76da61ac2553606"
            ],
            "tags": {
              "Name": "ACS-ext-alb"
            },
            "tags_all": {
              "Name": "ACS-ext-alb"
            },
            "vpc_id": "vpc-04b14459a4029445b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:loadbalancer/app/ialb/a370e370bf0c583e",
            "arn_suffix": "app/ialb/a370e370bf0c583e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-1642810444.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:571207880192:loadbalancer/app/ialb/a370e370bf0c583e",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f45c6f2c6ccdcdec"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c2ee8aa56361a87"
              },
              {
                "subnet_id": "subnet-0e9439bab20ec6e83"
              }
            ],
            "subnets": [
              "subnet-07c2ee8aa56361a87",
              "subnet-0e9439bab20ec6e83"
            ],
            "tags": {
              "Name": "ACS-int-alb"
            },
            "tags_all": {
              "Name": "ACS-int-alb"
            },
            "vpc_id": "vpc-04b14459a4029445b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:listener/app/ACS-ext-alb/6671dbd9a8cd4aa0/9bb475ede2b6eb31",
            "certificate_arn": "arn:aws:acm:us-east-1:571207880192:certificate/154af7f4-3466-49c6-b9fa-c39eee56145c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:targetgroup/nginx-tgt/5e0ab573228207e2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571207880192:listener/app/ACS-ext-alb/6671dbd9a8cd4aa0/9bb475ede2b6eb31",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:loadbalancer/app/ACS-ext-alb/6671dbd9a8cd4aa0",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.jendyjasper",
            "module.ALB.aws_acm_certificate_validation.jendyjasper",
            "module.ALB.aws_lb.ext-alb",
            "module.ALB.aws_lb_target_group.nginx-tgt",
            "module.ALB.aws_route53_record.jendyjasper",
            "module.ALB.data.aws_route53_zone.jendyjasper",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:listener/app/ialb/a370e370bf0c583e/76b1099d9843fe42",
            "certificate_arn": "arn:aws:acm:us-east-1:571207880192:certificate/154af7f4-3466-49c6-b9fa-c39eee56145c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:targetgroup/wordpress-tgt/bda0fc553933b78c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571207880192:listener/app/ialb/a370e370bf0c583e/76b1099d9843fe42",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:loadbalancer/app/ialb/a370e370bf0c583e",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.jendyjasper",
            "module.ALB.aws_acm_certificate_validation.jendyjasper",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.jendyjasper",
            "module.ALB.data.aws_route53_zone.jendyjasper",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:targetgroup/jendy-tooling-tgt/e3a71e9b05015e3a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:listener-rule/app/ialb/a370e370bf0c583e/76b1099d9843fe42/d6f5ecbd31d1b928",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.jendyjasper.gq"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571207880192:listener-rule/app/ialb/a370e370bf0c583e/76b1099d9843fe42/d6f5ecbd31d1b928",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:listener/app/ialb/a370e370bf0c583e/76b1099d9843fe42",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_lb_listener.web-listener",
            "module.ALB.aws_lb_target_group.tooling-tgt",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:targetgroup/nginx-tgt/5e0ab573228207e2",
            "arn_suffix": "targetgroup/nginx-tgt/5e0ab573228207e2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571207880192:targetgroup/nginx-tgt/5e0ab573228207e2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:targetgroup/jendy-tooling-tgt/e3a71e9b05015e3a",
            "arn_suffix": "targetgroup/jendy-tooling-tgt/e3a71e9b05015e3a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571207880192:targetgroup/jendy-tooling-tgt/e3a71e9b05015e3a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jendy-tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571207880192:targetgroup/wordpress-tgt/bda0fc553933b78c",
            "arn_suffix": "targetgroup/wordpress-tgt/bda0fc553933b78c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571207880192:targetgroup/wordpress-tgt/bda0fc553933b78c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0327e582240cf1433",
            "association_id": "eipassoc-0ea01888175c0454b",
            "domain": "vpc",
            "id": "eipalloc-0327e582240cf1433",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a926c279d06ee31a",
            "private_dns": "ip-172-16-2-236.ec2.internal",
            "private_ip": "172.16.2.236",
            "public_dns": "ec2-44-217-108-28.compute-1.amazonaws.com",
            "public_ip": "44.217.108.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ACS-EIP"
            },
            "tags_all": {
              "Name": "ACS-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:internet-gateway/igw-07419d7020c049e24",
            "id": "igw-07419d7020c049e24",
            "owner_id": "571207880192",
            "tags": {
              "Name": "vpc-04b14459a4029445b-IG!"
            },
            "tags_all": {
              "Name": "vpc-04b14459a4029445b-IG!"
            },
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0327e582240cf1433",
            "association_id": "eipassoc-0ea01888175c0454b",
            "connectivity_type": "public",
            "id": "nat-05a0fcf0566871898",
            "network_interface_id": "eni-0a926c279d06ee31a",
            "private_ip": "172.16.2.236",
            "public_ip": "44.217.108.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e37481a8a6ac22ef",
            "tags": {
              "Name": "ACS-Nat"
            },
            "tags_all": {
              "Name": "ACS-Nat"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07419d7020c049e24",
            "id": "r-rtb-0086c6e627404f7751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0086c6e627404f775",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:route-table/rtb-01954797b06b0a9b7",
            "id": "rtb-01954797b06b0a9b7",
            "owner_id": "571207880192",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ACS-Private-Route-Table"
            },
            "tags_all": {
              "Name": "ACS-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:route-table/rtb-0086c6e627404f775",
            "id": "rtb-0086c6e627404f775",
            "owner_id": "571207880192",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07419d7020c049e24",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ACS-Public-Route-Table"
            },
            "tags_all": {
              "Name": "ACS-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02355a469c213eb62",
            "route_table_id": "rtb-01954797b06b0a9b7",
            "subnet_id": "subnet-07c2ee8aa56361a87"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006f8a30080765a04",
            "route_table_id": "rtb-01954797b06b0a9b7",
            "subnet_id": "subnet-0e9439bab20ec6e83"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6127e709c41763c",
            "route_table_id": "rtb-01954797b06b0a9b7",
            "subnet_id": "subnet-034bfd1f15f21d05b"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0064615f4d2c49ea8",
            "route_table_id": "rtb-01954797b06b0a9b7",
            "subnet_id": "subnet-04ecb743b793b50f5"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4395409632b674a",
            "route_table_id": "rtb-0086c6e627404f775",
            "subnet_id": "subnet-0e37481a8a6ac22ef"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faf92e2bdd000c8a",
            "route_table_id": "rtb-0086c6e627404f775",
            "subnet_id": "subnet-0e76da61ac2553606"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:subnet/subnet-07c2ee8aa56361a87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c2ee8aa56361a87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571207880192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-0"
            },
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:subnet/subnet-0e9439bab20ec6e83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9439bab20ec6e83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571207880192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-1"
            },
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:subnet/subnet-034bfd1f15f21d05b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034bfd1f15f21d05b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571207880192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-2"
            },
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:subnet/subnet-04ecb743b793b50f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ecb743b793b50f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571207880192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-3"
            },
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:subnet/subnet-0e37481a8a6ac22ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e37481a8a6ac22ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571207880192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PublicSubnet-0"
            },
            "tags_all": {
              "Name": "ACS-PublicSubnet-0"
            },
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:subnet/subnet-0e76da61ac2553606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e76da61ac2553606",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571207880192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "ACS-PublicSubnet-1"
            },
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:vpc/vpc-04b14459a4029445b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-081bbb31ba40dc16f",
            "default_route_table_id": "rtb-0cce2f0eaecde2b28",
            "default_security_group_id": "sg-09dbea97b9c7b2996",
            "dhcp_options_id": "dopt-0c14cd89513e0e4ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b14459a4029445b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cce2f0eaecde2b28",
            "owner_id": "571207880192",
            "tags": {
              "Name": "ACS-VPC"
            },
            "tags_all": {
              "Name": "ACS-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:571207880192:instance/i-05d99faf781fd3c00",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d99faf781fd3c00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Darey-AWS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f035dcea71402563",
            "private_dns": "ip-172-16-2-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.142",
            "public_dns": "ec2-3-87-87-171.compute-1.amazonaws.com",
            "public_ip": "3.87.87.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043bec1e2a47f8eea",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e37481a8a6ac22ef",
            "tags": {
              "Name": "ACS-Jenkins"
            },
            "tags_all": {
              "Name": "ACS-Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036a4120ff4e19ecf"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "artifactory",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:571207880192:instance/i-0e37112686c2e3e44",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e37112686c2e3e44",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Darey-AWS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0144a3de0c6bf29bb",
            "private_dns": "ip-172-16-2-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.251",
            "public_dns": "ec2-3-91-71-224.compute-1.amazonaws.com",
            "public_ip": "3.91.71.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f576755641304c81",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e37481a8a6ac22ef",
            "tags": {
              "Name": "ACS-artifactory"
            },
            "tags_all": {
              "Name": "ACS-artifactory"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036a4120ff4e19ecf"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonbarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:571207880192:instance/i-0589803b13cb65589",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0589803b13cb65589",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Darey-AWS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0928cc1ca3d48bca1",
            "private_dns": "ip-172-16-2-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.66",
            "public_dns": "ec2-54-198-12-0.compute-1.amazonaws.com",
            "public_ip": "54.198.12.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fce6a2bc3cc5c2c2",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e37481a8a6ac22ef",
            "tags": {
              "Name": "ACS-sonbarqube"
            },
            "tags_all": {
              "Name": "ACS-sonbarqube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036a4120ff4e19ecf"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ACS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:security-group/sg-06480ed5da788e883",
            "description": "for bastion instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06480ed5da788e883",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "571207880192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "datalayer-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:security-group/sg-0605765c16d4dc763",
            "description": "data layer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0605765c16d4dc763",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c21b42dfa474283a"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06480ed5da788e883",
                  "sg-0c21b42dfa474283a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "571207880192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "datalayer-sg"
            },
            "tags_all": {
              "Name": "datalayer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ext-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:security-group/sg-036a4120ff4e19ecf",
            "description": "for external loadbalncer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036a4120ff4e19ecf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "571207880192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ext-alb-sg"
            },
            "tags_all": {
              "Name": "ext-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "int-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:security-group/sg-0f45c6f2c6ccdcdec",
            "description": "IALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f45c6f2c6ccdcdec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04431183b9cb93516"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "571207880192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "int-alb-sg"
            },
            "tags_all": {
              "Name": "int-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "nginx-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:security-group/sg-04431183b9cb93516",
            "description": "nginx instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04431183b9cb93516",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06480ed5da788e883"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-036a4120ff4e19ecf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "571207880192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "webserver-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571207880192:security-group/sg-0c21b42dfa474283a",
            "description": "webservers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c21b42dfa474283a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06480ed5da788e883"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f45c6f2c6ccdcdec"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "571207880192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b14459a4029445b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1406216132",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-036a4120ff4e19ecf",
            "security_group_rule_id": "sgr-04ef65b5710d20756",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2898236930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-036a4120ff4e19ecf",
            "security_group_rule_id": "sgr-04136a683ca14a04b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-359087927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04431183b9cb93516",
            "security_group_rule_id": "sgr-053e6edd488f07742",
            "self": false,
            "source_security_group_id": "sg-06480ed5da788e883",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-4160754071",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f45c6f2c6ccdcdec",
            "security_group_rule_id": "sgr-0b733c28487fb2ed5",
            "self": false,
            "source_security_group_id": "sg-04431183b9cb93516",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2858418457",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0605765c16d4dc763",
            "security_group_rule_id": "sgr-054f6ec9de85021cb",
            "self": false,
            "source_security_group_id": "sg-06480ed5da788e883",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3833777307",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0605765c16d4dc763",
            "security_group_rule_id": "sgr-009a9abd8f503809a",
            "self": false,
            "source_security_group_id": "sg-0c21b42dfa474283a",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 2049,
            "id": "sgrule-2000968721",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0605765c16d4dc763",
            "security_group_rule_id": "sgr-0d27ead9331e1da58",
            "self": false,
            "source_security_group_id": "sg-0c21b42dfa474283a",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-819475041",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04431183b9cb93516",
            "security_group_rule_id": "sgr-090575d77ca5b5044",
            "self": false,
            "source_security_group_id": "sg-036a4120ff4e19ecf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ssh-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-193610831",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06480ed5da788e883",
            "security_group_rule_id": "sgr-0699ac344b6aba45b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-1594669288",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c21b42dfa474283a",
            "security_group_rule_id": "sgr-075c2e4baffcbefe3",
            "self": false,
            "source_security_group_id": "sg-0f45c6f2c6ccdcdec",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-928938904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c21b42dfa474283a",
            "security_group_rule_id": "sgr-0125ed64e0df07edf",
            "self": false,
            "source_security_group_id": "sg-06480ed5da788e883",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    }
  ]
}